--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
-<!--head.preload-->
-<!--head.tags-->
+${head.preload}
+${head.tags}
 </head>
 <body>
-<!--hydration-->
-<div id="app"><!--element--></div>
-<script type="module" src="/entry/client.js"></script>
+${hydration}
+<div id="app">${element}</div>
+<script type="module" src="@app/entry/client.js"></script>
 </body>
 </html>
