--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ ${head.tags}
 <body>
 ${hydration}
 <div id="app">${element}</div>
-<script type="module" src="@app/entry/client.js"></script>
+<script type="module" src="/entry/client.js"></script>
 </body>
 </html>
